# bonsai

./: pyproject.toml
transfer/mimo/: activate.sh  download.sh
transfer/mimo/bonsai/: README.md  modeling.py  params.py  smoke_test_tiny_jax.py
transfer/mimo/transformer/: configuration_mimo_v2_flash.py  modeling_mimo_v2_flash.py  smoke_test_tiny.py
transfer/qwen3/bonsai/: README.md  modeling.py  params.py
transfer/qwen3/transformer/: __init__.py  configuration_qwen3.py  modular_qwen3.py
