[project]
name = "jax-bonsai"
dynamic = ["version"]
description = "A collection of lightweight, open-source models built on JAX."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "JAX-bonsai developers", email = "jax-bonsai@google.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "jax >= 0.8.0, < 0.9.0",
  "jaxlib >= 0.8.0, < 0.9.0",
  "flax >= 0.12.0, < 0.13.0",
  "jaxtyping>=0.2.20",
  "jinja2>=3.0.0",
  "huggingface-hub>=0.20.0",
  "transformers>=4.30.0",
  "torch>=2.10.0",
]

[project.optional-dependencies]
tf = ["h5py", "keras_hub", "tensorflow"]
vision = ["timm", "pillow>=11.3.0", "opencv-python-headless"]
audio = ["librosa"]

dev = [
  "xprof",
  "pre-commit",
  "jupytext == 1.18.1",
  "ruff",
]

test-env = [
  "torch",
  "timm",
  "h5py",
  "diffusers[flax]",
  "keras_hub",
]

testing = [
  "pytest",
  "pytest-xdist",
  "jax-bonsai[test-env]",
]

[project.urls]
Source = "https://github.com/jax-ml/bonsai"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bonsai*"]

[tool.setuptools.dynamic]
version = {attr = "bonsai.__version__"}

[tool.ruff]
target-version = "py311"
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = [
    # Unnecessary collection call
    "C408",
    # Unnecessary map usage
    "C417",
    # Unnecessary dict comprehension for iterable
    "C420",
    # Object names too complex
    "C901",
    # Local variable is assigned to but never used
    "F841",
    # Class could be dataclass or namedtuple
    "B903",
    # Raise with from clause inside except block
    "B904",
    # Zip without explicit strict parameter
    "B905",
]
select = [
    "B9",
    "C",
    "F",
    "W",
    "YTT",
    "ASYNC",
    "E101",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.jupytext]
formats = "ipynb,md:myst"
cell_metadata_filter = "-all"
